# 24C1-El-Ojo-de-Sauron

./: .gitignore  Backup.toml  Login.toml  README.md  log.txt  run.sh
.github/workflows/: ci.yml
project/: "log.txt"  Cargo.toml  log.txt
project/aws-demo/: Cargo.toml
project/aws-demo/src/: main.rs
project/camera-system/: Cargo.toml  Settings.toml  config.json  config_demo.json
project/camera-system/src/: camera.rs  camera_status.rs  camera_system.rs  client.rs  config.rs  incident.rs  lib.rs  main.rs
project/common/: Cargo.toml
project/common/src/: camera_status.rs  coordenate.rs  drone_status.rs  incident.rs  lib.rs  position.rs
project/drone/: Cargo.toml  config.json
project/drone/config/: config_1.json  config_10.json  config_2.json  config_3.json  config_4.json  config_5.json  config_6.json  config_7.json  config_8.json  config_9.json
project/drone/src/: client.rs  config.rs  drone.rs  drone_status.rs  error.rs  incident.rs  lib.rs  main.rs  utils.rs
project/drone/tests/: integration_tests.rs
project/monitor/: Cargo.toml  Settings.toml  config.json
project/mqtt/: Cargo.toml
project/sauron/: Cargo.toml
project/server/: Backup.toml  Cargo.toml  Login.toml  Settings.toml  config.txt  log.txt  test_login_file.txt
project/server/src/: client.rs  client_manager.rs  config.rs  error.rs  lib.rs  logfile.rs  main.rs  mod.rs  server.rs  task_handler.rs  topic_handler.rs
project/server/src/deprecated/: client.rs
project/server/src/server/: client.rs  config.rs  server.rs  topic.rs
project/tests-integration/: Cargo.toml
(+132 files in other folders)
