[package]
name = "camera-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt"} 
common = { path = "../common"}
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
