[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron = { path = "../sauron"} 

# [[bin]]
# name = "client"
# path = "src/server/client/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"
